# uninwalk-be

./: Dockerfile  README.md  pyproject.toml
src/: app.py  evaluator.py
src/api/: __init__.py  chatbot.py  classrooms.py  professors.py  rooms.py  unin_data.py
src/config/: settings.py
src/data/: professors.json  rooms.json  unin_data.json
src/db/: professors_repo.py  rooms_repo.py  unin_data_repo.py  utility.py
src/dependencies/: chatbot.py
src/models/: chatbot_models.py
src/services/: __init__.py  chatbot_service.py  vector_store_service.py
