[project]
name = "uninwalk-be"
version = "0.1.0"
description = "UNINwalk backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.117.1",
  "uvicorn==0.37.0",
  "langchain==0.3.11",
  "langchain-groq==0.2.1",
  "langchain-huggingface==0.1.2",
  "langchain-community==0.3.11",
  "python-dotenv==1.0.0",
  "pydantic-settings==2.6.1",
  "faiss-cpu==1.9.0",
  "rank-bm25>=0.2.2",
  "ragas==0.4.3",
]
